--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-*{
+*{      margin: 0;
+    padding: 0;
        font-family: 'Poppins',sans-serif;
        box-sizing: border-box;
 }
@@ -115,4 +116,51 @@ body{
     display: none;
 }
 
+
+@media(max-width:500px){
+    .search input{
+        width: 100px;
+        height: 45px;
+    }
+    .search button{
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+    }
+    .weather h1{
+        font-size: 50px;
+        font-weight: 500;
+     
+    }
+    .weather h2{
+        font-size: 35px;
+        font-weight: 400;
+        margin-top: 5px;
+    }
+    .weather-icon{
+        width: 140px;
+        margin-top: 0;
+    }
+    .details{
+        gap: 30px;
+        /* margin: 0; */
+        padding: 0;
+    }
+    .col{
+      
+        padding: 0px 0;
+        /* gap: 10px; */
+        /* border: 2px s?olid black; */
+    
+    }
+    .col img{
+        width: 40px;
+        margin-right:10px ;
+    }
+    .humidity ,.wind{
+        font-size: 15px;
+        /* border: 2px solid black; */
+        margin-top: -6px;
+    }
+}
 
